Update to java21 and use new virtual threads (#369)
## Description

* Update runtime to java21
* Use virtual threads to avoid memory consume
* Some code clean

## Type of Change

Please delete options that are not relevant.

* New feature (non-breaking change which adds functionality)

## Checklist

- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [x] I have commented my code, particularly in hard-to-understand areas
- [x] I have made corresponding changes to the documentation
- [x] My changes generate no new warnings
- [x] I have added tests that prove my fix is effective or that my
feature works
- [x] New and existing unit/integration tests pass locally with my
changes

---------

Signed-off-by: David Kornel <kornys@outlook.com>